// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders <Filters /> without throwing 1`] = `
.c12 {
  margin-right: 0.75rem;
  margin-left: 0.375rem;
}

.c0 {
  margin-top: 0.375rem;
  margin-bottom: 1.125rem;
}

.c11 {
  margin-right: 0.375rem;
  margin-left: 0.375rem;
}

.c13 {
  margin-top: 0.75rem;
  margin-bottom: 0.375rem;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c16 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  min-width: 7.5rem;
}

.c16::-moz-focus-inner,
.c16[type='button']::-moz-focus-inner,
.c16[type='reset']::-moz-focus-inner,
.c16[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c16:-moz-focusring,
.c16[type='button']:-moz-focusring,
.c16[type='reset']:-moz-focusring,
.c16[type='submit']:-moz-focusring {
  outline: 0.0625rem dotted ButtonText;
}

.c16 + button,
.c16 + a {
  margin-left: 0.375rem;
}

.c6 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  display: none;
}

.c6[type='checkbox'],
.c6[type='radio'] {
  box-sizing: border-box;
  padding: 0;
}

.c6[type='number']::-webkit-inner-spin-button,
.c6[type='number']::-webkit-outer-spin-button {
  height: auto;
}

.c6[type='search'] {
  -webkit-appearance: textfield;
  -moz-appearance: textfield;
  appearance: textfield;
  outline-offset: -0.125rem;
}

.c6[type='search']::-webkit-search-cancel-button,
.c6[type='search']::-webkit-search-decoration {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c6::-webkit-file-upload-button {
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  font: inherit;
}

.c6:checked + label::after {
  opacity: 1;
}

.c6:selected + label::after {
  opacity: 1;
}

.c6:checked + label {
  border-color: rgb(59,70,204);
}

.c6:selected + label {
  border-color: rgb(59,70,204);
}

.c6:disabled + label {
  background-color: rgb(249,249,249);
  cursor: not-allowed;
}

.c15 {
  display: inline-block;
}

.c15 + button,
.c15 + a {
  margin-left: 0.375rem;
}

.c14 {
  box-sizing: border-box;
  display: inline-block;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 3rem;
  height: 3rem;
  min-width: 7.5rem;
  padding: 0.9375rem 1.125rem;
  position: relative;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-size: 0.9375rem;
  text-align: center;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  vertical-align: middle;
  touch-action: manipulation;
  cursor: pointer;
  color: rgb(255,255,255);
  -webkit-text-fill-color: currentcolor;
  background-image: none;
  background-color: rgb(59,70,204);
  border-radius: 0.25rem;
  border: solid 0.0625rem rgb(45,56,132);
  color: rgb(70,70,70);
  -webkit-text-fill-color: currentcolor;
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
}

.c14:focus {
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgb(59,70,204);
  border-color: rgb(45,56,132);
}

.c14:hover {
  background-color: rgb(72,83,217);
  border: solid 0.0625rem rgb(45,56,132);
}

.c14:active,
.c14:active:hover,
.c14:active:focus {
  background-image: none;
  outline: 0;
  background-color: rgb(45,56,132);
  border-color: rgb(45,56,132);
}

.c14[disabled] {
  cursor: not-allowed;
  pointer-events: none;
}

.c14:focus {
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
}

.c14:hover {
  background-color: rgb(247,247,247);
  border-color: rgb(216,216,216);
}

.c14:active,
.c14:active:hover,
.c14:active:focus {
  background-color: rgb(230,230,230);
  border-color: rgb(216,216,216);
}

.c9 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-style: normal;
  font-stretch: normal;
  display: block;
  color: rgb(70,70,70);
  text-align: left;
  margin-bottom: 0.1875rem;
  margin-right: 0.75rem;
  font-weight: 600;
  white-space: pre;
  font-size: 0.8125rem;
  cursor: pointer;
  margin: 0;
}

.c1 {
  color: rgba(73,73,73,1);
  font-weight: 600;
  line-height: 1.5rem;
  font-size: 0.9375rem;
  margin: 0;
}

.c1 + p,
.c1 + small,
.c1 + h1,
.c1 + h2,
.c1 + label,
.c1 + h3,
.c1 + h4,
.c1 + h5,
.c1 + div,
.c1 + span {
  margin-top: 0.75rem;
}

.c7 {
  color: rgb(100,100,100);
  position: absolute;
  width: 1.125rem;
  height: 1.125rem;
  box-sizing: border-box;
  top: 0;
  right: 0;
  cursor: pointer;
  background-color: rgb(255,255,255);
  box-shadow: none;
  border: 0.0625rem solid rgb(216,216,216);
  cursor: pointer;
  border-radius: 0.25rem;
  width: 1.125rem;
  height: 1.125rem;
}

.c7::after {
  opacity: 0;
  content: '';
  position: absolute;
  width: 0.375rem;
  height: 0.125rem;
  background: transparent;
  top: 0.3125rem;
  left: 0.25rem;
  border: 0.125rem solid rgb(45,45,45);
  border-top: none;
  border-right: none;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

.c5 {
  display: inline-block;
  vertical-align: text-bottom;
  width: 1.125rem;
  height: 1.125rem;
  position: relative;
  cursor: pointer;
  margin-bottom: 0.75rem;
}

.c8 {
  margin-left: 0.75rem;
  margin-bottom: 0.75rem;
}

.c8 label {
  font-weight: normal;
  font-size: 0.9375rem;
}

.c4 {
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 label {
  font-weight: 400;
}

.c3 {
  display: inline-block;
  margin: 0;
  padding: 0;
  border: none;
  overflow: hidden;
  height: auto;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  -webkit-padding-before: 0;
  -webkit-padding-start: 0;
  -webkit-padding-end: 0;
  -webkit-padding-after: 0;
}

<div
  className="c0"
>
  <h4
    className="c1"
  >
    Filters
  </h4>
  <div
    className="c2"
    wrap={true}
  >
    <div
      className="baseline-jVaZNU kXgQxt c3"
      name="compute-optimized"
      role="group"
      style={undefined}
      type="checkbox"
    >
      <li
        className="c4"
      >
        <div
          checked={false}
          className="c5"
          disabled={false}
          id="m"
          onBlur={undefined}
          type="checkbox"
        >
          <input
            checked={false}
            className="c6"
            disabled={false}
            id="n"
            onBlur={undefined}
            type="checkbox"
          />
          <label
            className="c7"
            htmlFor="n"
          />
        </div>
        <div
          checked={false}
          className="c8"
          disabled={false}
          id="m"
          onBlur={undefined}
        >
          <label
            className="c9"
            htmlFor="n"
          >
            <div
              className="c10"
            >
              <svg
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20,18a2,2,0,0,1-2,2H6a2,2,0,0,1-2-2V6A2,2,0,0,1,6,4H18a2,2,0,0,1,2,2Zm3-5a1,1,0,0,0,0-2H22V10h1a1,1,0,0,0,0-2H22V6a4,4,0,0,0-4-4H16V1a1,1,0,0,0-2,0V2H13V1a1,1,0,0,0-2,0V2H10V1A1,1,0,0,0,8,1V2H6A4,4,0,0,0,2,6V8H1a1,1,0,0,0,0,2H2v1H1a1,1,0,0,0,0,2H2v1H1a1,1,0,0,0,0,2H2v2a4,4,0,0,0,4,4H8v1a1,1,0,0,0,2,0V22h1v1a1,1,0,0,0,2,0V22h1v1a1,1,0,0,0,2,0V22h2a4,4,0,0,0,4-4V16h1a1,1,0,0,0,0-2H22V13ZM7,7V17H17V7Zm9,9H8V8h8Z"
                  fill="#8043DC"
                />
              </svg>
              <div
                className="c11"
              >
                Compute Optimized
              </div>
            </div>
          </label>
        </div>
      </li>
    </div>
    <div
      className="baseline-jVaZNU kXgQxt c3"
      name="memory-optimized"
      role="group"
      style={undefined}
      type="checkbox"
    >
      <li
        className="c4"
      >
        <div
          checked={false}
          className="c5"
          disabled={false}
          id="o"
          onBlur={undefined}
          type="checkbox"
        >
          <input
            checked={false}
            className="c6"
            disabled={false}
            id="p"
            onBlur={undefined}
            type="checkbox"
          />
          <label
            className="c7"
            htmlFor="p"
          />
        </div>
        <div
          checked={false}
          className="c8"
          disabled={false}
          id="o"
          onBlur={undefined}
        >
          <label
            className="c9"
            htmlFor="p"
          >
            <div
              className="c10"
            >
              <svg
                height="21.68"
                viewBox="0 0 21.68 21.68"
                width="21.68"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.24,11.9,8.36,14l1.42-1.41L7.66,10.49ZM4.12,14l2.12,2.12,1.42-1.41L5.54,12.6ZM8.36,9.78l2.13,2.12,1.41-1.41L9.78,8.36Zm2.13-2.12,2.12,2.12L14,8.36,11.9,6.24Zm2.12-2.13,2.12,2.13,1.41-1.42L14,4.12Zm8.48,0L16.14.59a2,2,0,0,0-2.83,0L.59,13.31a2,2,0,0,0,0,2.83l5,4.95a2,2,0,0,0,2.82,0l1.42-1.41.71.7A1,1,0,0,0,11.9,19l-.71-.71.71-.7.71.7A1,1,0,0,0,14,16.85l-.71-.71.71-.71.71.71a1,1,0,0,0,1.41-1.41L15.43,14l.71-.71.71.71a1,1,0,0,0,1.41-1.41l-.7-.71.7-.71.71.71a1,1,0,0,0,1.41-1.41l-.7-.71,1.41-1.42A2,2,0,0,0,21.09,5.54ZM7,19.68,2,14.73,14.73,2l4.95,5Z"
                  fill="#32ABCF"
                />
              </svg>
              <div
                className="c12"
              >
                Memory Optimized
              </div>
            </div>
          </label>
        </div>
      </li>
    </div>
    <div
      className="baseline-jVaZNU kXgQxt c3"
      name="general-purpose"
      role="group"
      style={undefined}
      type="checkbox"
    >
      <li
        className="c4"
      >
        <div
          checked={false}
          className="c5"
          disabled={false}
          id="q"
          onBlur={undefined}
          type="checkbox"
        >
          <input
            checked={false}
            className="c6"
            disabled={false}
            id="r"
            onBlur={undefined}
            type="checkbox"
          />
          <label
            className="c7"
            htmlFor="r"
          />
        </div>
        <div
          checked={false}
          className="c8"
          disabled={false}
          id="q"
          onBlur={undefined}
        >
          <label
            className="c9"
            htmlFor="r"
          >
            <div
              className="c10"
            >
              <svg
                height="20"
                viewBox="0 0 20 20"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18,17a1,1,0,0,1-1,1H3a1,1,0,0,1-1-1V3A1,1,0,0,1,3,2H17a1,1,0,0,1,1,1ZM17,0H3A3,3,0,0,0,0,3V17a3,3,0,0,0,3,3H17a3,3,0,0,0,3-3V3A3,3,0,0,0,17,0ZM10,15a5,5,0,1,1,5-5A5,5,0,0,1,10,15ZM10,4a6,6,0,1,0,6,6A6,6,0,0,0,10,4ZM9,10a1,1,0,1,0,1-1A1,1,0,0,0,9,10Z"
                  fill="#E08A0E"
                />
              </svg>
              <div
                className="c12"
              >
                General Purpose
              </div>
            </div>
          </label>
        </div>
      </li>
    </div>
    <div
      className="baseline-jVaZNU kXgQxt c3"
      name="storage-optimized"
      role="group"
      style={undefined}
      type="checkbox"
    >
      <li
        className="c4"
      >
        <div
          checked={false}
          className="c5"
          disabled={false}
          id="s"
          onBlur={undefined}
          type="checkbox"
        >
          <input
            checked={false}
            className="c6"
            disabled={false}
            id="t"
            onBlur={undefined}
            type="checkbox"
          />
          <label
            className="c7"
            htmlFor="t"
          />
        </div>
        <div
          checked={false}
          className="c8"
          disabled={false}
          id="s"
          onBlur={undefined}
        >
          <label
            className="c9"
            htmlFor="t"
          >
            <div
              className="c10"
            >
              <svg
                className=""
                height="20"
                innerRef={undefined}
                style={
                  Object {
                    "transform": "rotate(0deg)",
                  }
                }
                viewBox="0 0 22 20"
                width="22"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17,16a1,1,0,1,1,1,1A1,1,0,0,1,17,16ZM7,17H8V15H7ZM5,17H6V15H5ZM3,17H4V15H3Zm14-7a1,1,0,1,1,1,1A1,1,0,0,1,17,10ZM7,11H8V9H7ZM5,11H6V9H5ZM3,11H4V9H3ZM19,4a1,1,0,1,1-1-1A1,1,0,0,1,19,4ZM7,5H8V3H7ZM5,5H6V3H5ZM3,5H4V3H3ZM22,2a2,2,0,0,0-2-2H2A2,2,0,0,0,0,2V6A1.91,1.91,0,0,0,.28,7,1.88,1.88,0,0,0,0,8v4a1.91,1.91,0,0,0,.28,1A1.88,1.88,0,0,0,0,14v4a2,2,0,0,0,2,2H20a2,2,0,0,0,2-2V14a1.88,1.88,0,0,0-.28-1A1.91,1.91,0,0,0,22,12V8a1.88,1.88,0,0,0-.28-1A1.91,1.91,0,0,0,22,6ZM20,18H2V14H20Zm0-6H2V8H20Zm0-6H2V2H20Z"
                  fill="#A88A83"
                />
              </svg>
              <div
                className="c12"
              >
                Storage Optimized
              </div>
            </div>
          </label>
        </div>
      </li>
    </div>
    <div
      className="baseline-jVaZNU kXgQxt c3"
      name="ssd"
      role="group"
      style={undefined}
      type="checkbox"
    >
      <li
        className="c4"
      >
        <div
          checked={false}
          className="c5"
          disabled={false}
          id="u"
          onBlur={undefined}
          type="checkbox"
        >
          <input
            checked={false}
            className="c6"
            disabled={false}
            id="v"
            onBlur={undefined}
            type="checkbox"
          />
          <label
            className="c7"
            htmlFor="v"
          />
        </div>
        <div
          checked={false}
          className="c8"
          disabled={false}
          id="u"
          onBlur={undefined}
        >
          <label
            className="c9"
            htmlFor="v"
          >
            SSD
          </label>
        </div>
      </li>
    </div>
  </div>
  <div
    className="c13"
  >
    <button
      className="c14 c15 c16"
      href=""
      onClick={undefined}
      type="button"
    >
      Reset Filters
    </button>
  </div>
</div>
`;

exports[`renders <Overview /> without throwing 1`] = `
Array [
  .c0 {
  margin-bottom: 0.75rem;
}

.c1 {
  color: rgba(73,73,73,1);
  font-weight: normal;
  line-height: 1.625rem;
  font-size: 1.3125rem;
  margin: 0;
}

<div
    className="c0"
>
    <h3
        className="c1"
    >
        test
    </h3>
</div>,
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  width: 0.0625rem;
  background: rgb(216,216,216);
  height: 1.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  margin: 0 1.125rem;
  box-sizing: border-box;
}

<div
    className="c0"
>
    <span>
        1
         $
    </span>
    <div
        className="c1"
    />
    <span>
        1
    </span>
    <div
        className="c1"
    />
    <span>
        1
         disk
    </span>
    <div
        className="c1"
    />
</div>,
]
`;

exports[`renders <Overview hasVms/> without throwing 1`] = `
Array [
  .c0 {
  margin-bottom: 0.75rem;
}

.c1 {
  color: rgba(73,73,73,1);
  font-weight: normal;
  line-height: 1.625rem;
  font-size: 1.3125rem;
  margin: 0;
}

<div
    className="c0"
>
    <h3
        className="c1"
    >
        test
    </h3>
</div>,
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  width: 0.0625rem;
  background: rgb(216,216,216);
  height: 1.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  margin: 0 1.125rem;
  box-sizing: border-box;
}

<div
    className="c0"
>
    <span>
        1
         $
    </span>
    <div
        className="c1"
    />
    <span>
        1
    </span>
    <div
        className="c1"
    />
    <span>
        1
         vCPUS
    </span>
    <div
        className="c1"
    />
    <span>
        1
         disk
    </span>
    <div
        className="c1"
    />
    <span>
        SSD
    </span>
</div>,
]
`;

exports[`renders <Package /> without throwing 1`] = `
.c10 {
  margin-right: 0.75rem;
  margin-left: 0.375rem;
}

.c12 {
  display: inline-block;
  margin-right: 0.375rem;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  display: none;
}

.c6[type='checkbox'],
.c6[type='radio'] {
  box-sizing: border-box;
  padding: 0;
}

.c6[type='number']::-webkit-inner-spin-button,
.c6[type='number']::-webkit-outer-spin-button {
  height: auto;
}

.c6[type='search'] {
  -webkit-appearance: textfield;
  -moz-appearance: textfield;
  appearance: textfield;
  outline-offset: -0.125rem;
}

.c6[type='search']::-webkit-search-cancel-button,
.c6[type='search']::-webkit-search-decoration {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c6::-webkit-file-upload-button {
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  font: inherit;
}

.c6:checked + label::after {
  opacity: 1;
}

.c6:selected + label::after {
  opacity: 1;
}

.c6:checked + label {
  border-color: rgb(59,70,204);
}

.c6:selected + label {
  border-color: rgb(59,70,204);
}

.c6:disabled + label {
  background-color: rgb(249,249,249);
  cursor: not-allowed;
}

.c11 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-style: normal;
  font-stretch: normal;
  display: block;
  color: rgb(70,70,70);
  text-align: left;
  margin-bottom: 0.1875rem;
  margin-right: 0.75rem;
  font-weight: 600;
  white-space: pre;
  font-size: 0.8125rem;
  cursor: pointer;
  margin: 0;
}

.c7 {
  color: rgb(100,100,100);
  position: absolute;
  width: 1.125rem;
  height: 1.125rem;
  box-sizing: border-box;
  top: 0;
  right: 0;
  cursor: pointer;
  background-color: rgb(255,255,255);
  box-shadow: none;
  border: 0.0625rem solid rgb(216,216,216);
  cursor: pointer;
  width: 1.125rem;
  height: 1.125rem;
  border-radius: 50%;
}

.c7::after {
  opacity: 0;
  content: '';
  position: absolute;
  width: 0.375rem;
  height: 0.375rem;
  border-radius: 50%;
  background-color: rgba(73,73,73,1);
  top: 50%;
  left: 50%;
  -webkit-transform: translateX(-50%) translateY(-50%);
  -ms-transform: translateX(-50%) translateY(-50%);
  transform: translateX(-50%) translateY(-50%);
}

.c5 {
  display: inline-block;
  vertical-align: text-bottom;
  width: 1.125rem;
  height: 1.125rem;
  position: relative;
  cursor: pointer;
}

.c8 {
  margin-left: 0.75rem;
}

.c8 label {
  font-weight: normal;
  font-size: 0.9375rem;
}

.c3 {
  display: inline-block;
  margin: 0;
  padding: 0;
  border: none;
  overflow: hidden;
  height: auto;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  -webkit-padding-before: 0;
  -webkit-padding-start: 0;
  -webkit-padding-end: 0;
  -webkit-padding-after: 0;
  width: 100%;
}

.c4 {
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  text-align: right;
  border-bottom-width: 0;
}

.c2:not(:first-child) {
  border-left-width: 0;
}

.c2:not(:last-child) {
  border-right-width: 0;
}

.c1 {
  display: table-row;
  color: rgba(73,73,73,1);
  background-color: rgb(255,255,255);
  box-shadow: 0 0.125rem 0 rgba(0,0,0,0.05);
  box-sizing: border-box;
}

.c1:last-child {
  box-shadow: none;
}

.c1:last-child td {
  border-bottom-width: 0.0625rem;
}

.c0 {
  cursor: pointer;
}

<tr
  className="c0 c1"
  disabled={undefined}
  name="tr"
  onClick={[Function]}
  selected={undefined}
>
  <td
    className="c2"
    disabled={undefined}
    name="td"
    selected={false}
  >
    <div
      className="baseline-jVaZNU kXgQxt c3"
      name="package"
      role="group"
      style={undefined}
      type="radio"
      value={undefined}
    >
      <li
        className="c4"
        disabled={false}
        onBlur={null}
      >
        <div
          className="c5"
          disabled={false}
          id="k"
          onBlur={null}
          type="radio"
        >
          <input
            checked={undefined}
            className="c6"
            disabled={false}
            id="l"
            onBlur={null}
            type="radio"
          />
          <label
            className="c7"
            htmlFor="l"
          />
        </div>
        <div
          className="c8"
          disabled={false}
          id="k"
          onBlur={null}
        >
          <div
            className="c9"
          >
            <div
              className="c10"
            >
              <label
                className="c11"
                htmlFor="l"
                style={
                  Object {
                    "fontWeight": "normal",
                  }
                }
              >
                test
              </label>
            </div>
          </div>
        </div>
      </li>
    </div>
  </td>
  <td
    className="c2"
    disabled={undefined}
    name="td"
    selected={false}
  >
    1
  </td>
  <td
    className="c2"
    disabled={undefined}
    name="td"
    selected={false}
  >
    <div
      className="c12"
    >
      1
    </div>
  </td>
  <td
    className="c2"
    disabled={undefined}
    name="td"
    selected={false}
  >
    1
  </td>
</tr>
`;

exports[`renders <Packages expanded /> without throwing 1`] = `
.c11 {
  margin-bottom: 0.75rem;
}

.c9 {
  padding: 2.25rem;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  margin-bottom: 0.125rem;
  margin-left: 0.5625rem;
}

.c13 {
  color: rgba(73,73,73,1);
  font-weight: normal;
  line-height: 1.625rem;
  font-size: 1.3125rem;
  margin: 0;
}

.c13 + p,
.c13 + small,
.c13 + h1,
.c13 + h2,
.c13 + label,
.c13 + h3,
.c13 + h4,
.c13 + h5,
.c13 + div,
.c13 + span {
  margin-top: 1.5rem;
}

.c8 {
  box-sizing: content-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  border-width: 0.0625rem;
  border-style: solid;
  -webkit-transition: all 300ms ease;
  transition: all 300ms ease;
  color: rgba(73,73,73,1);
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
}

.c0 {
  overflow: hidden;
  border-spacing: 0;
  border-collapse: separate;
  table-layout: fixed;
  width: 100%;
  max-width: 100%;
}

.c1 {
  width: 100%;
  background: rgb(250,250,250);
}

.c1 th:first-child {
  border-top-left-radius: 0.25rem;
}

.c1 th:last-child {
  border-top-right-radius: 0.25rem;
}

.c6 {
  width: 100%;
}

.c3 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 12.5rem;
  display: table-cell;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  text-align: left;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
  border-bottom-width: 0;
  color: rgba(73,73,73,1);
  font-weight: 600;
}

.c3:not(:first-child) {
  border-left-width: 0;
}

.c3:not(:last-child) {
  border-right-width: 0;
}

.c5 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 6.25rem;
  display: table-cell;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  text-align: right;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
  border-bottom-width: 0;
}

.c5:not(:first-child) {
  border-left-width: 0;
}

.c5:not(:last-child) {
  border-right-width: 0;
}

.c2 {
  display: table-row;
  color: rgba(73,73,73,1);
  background-color: rgb(255,255,255);
  box-shadow: 0 0.125rem 0 rgba(0,0,0,0.05);
  box-sizing: border-box;
  color: rgba(73,73,73,1);
  background-color: transparent;
  border: none;
  box-shadow: none;
}

.c2:last-child {
  box-shadow: none;
}

.c2:last-child td {
  border-bottom-width: 0.0625rem;
}

.c12 {
  color: rgb(151,151,151);
  text-align: center;
}

.c7 {
  width: calc(100% - 0.125rem);
  border-top: none;
}

<form>
  <table
    className="c0"
  >
    <thead
      className="c1"
      disabled={undefined}
      name="thdead"
      selected={undefined}
    >
      <tr
        className="c2"
        disabled={undefined}
        name="tr"
        selected={undefined}
      >
        <th
          className="c3"
          disabled={undefined}
          name="th"
          onClick={[Function]}
          selected={undefined}
        >
          <span>
            Name 
          </span>
          <svg
            className="c4"
            height="6"
            innerRef={undefined}
            marginBottom="0.125rem"
            marginLeft="0.5625rem"
            style={
              Object {
                "transform": "rotate(180deg)",
              }
            }
            viewBox="0 0 9.6 6"
            width="9.6"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.6,1.12,8.24,0,4.8,3.5,1.36,0,0,1.12,4.8,6Z"
              fill="rgba(73, 73, 73, 1)"
            />
          </svg>
        </th>
        <th
          className="c5"
          disabled={undefined}
          name="th"
          onClick={[Function]}
          selected={undefined}
        >
          <span>
            RAM 
          </span>
        </th>
        <th
          className="c5"
          disabled={undefined}
          name="th"
          onClick={[Function]}
          selected={undefined}
        >
          <span>
            Disk 
          </span>
        </th>
        <th
          className="c5"
          disabled={undefined}
          name="th"
          onClick={[Function]}
          selected={undefined}
        >
          <span>
            $/hour
          </span>
        </th>
      </tr>
    </thead>
    <tbody
      className="c6"
      disabled={undefined}
      name="tbody"
      selected={undefined}
    />
  </table>
  <div
    className="c7 c8"
    disabled={false}
    name="card"
  >
    <div
      className="c9"
    >
      <div
        className="c10"
      >
        <div
          className="c11"
        >
          <svg
            height={60}
            viewBox="0 0 79 60"
            width={79}
            xmlns="http://www.w3.org/2000/svg"
            xmlnsXlink="http://www.w3.org/1999/xlink"
          >
            <title>
              Guilty_Salamander
            </title>
            <desc>
              Created using Figma
            </desc>
            <use
              fill="#FAA427"
              transform="translate(23.8 22)"
              xlinkHref="#a"
            />
            <use
              fill="#F3722C"
              transform="translate(27.3 25.5)"
              xlinkHref="#b"
            />
            <use
              fill="#FAA427"
              transform="translate(4.8 32.1)"
              xlinkHref="#c"
            />
            <use
              fill="#F3722C"
              transform="translate(12.2 31.8)"
              xlinkHref="#d"
            />
            <use
              fill="#FAA427"
              transform="translate(54.4 31.9)"
              xlinkHref="#e"
            />
            <use
              fill="#F3722C"
              transform="translate(54.4 32)"
              xlinkHref="#f"
            />
            <use
              fill="#FAA427"
              transform="translate(15.8 26.8)"
              xlinkHref="#g"
            />
            <use
              fill="#FAA427"
              transform="translate(5)"
              xlinkHref="#h"
            />
            <use
              fill="#FAFBFC"
              transform="rotate(-15.13 41.037 5.45)"
              xlinkHref="#i"
            />
            <use
              fill="#412B13"
              transform="rotate(-15.13 67.273 -24.78)"
              xlinkHref="#j"
            />
            <use
              fill="#F3722C"
              transform="translate(2.2 8)"
              xlinkHref="#k"
            />
            <use
              fill="#FAFBFC"
              transform="rotate(-74.87 40.46 -20.511)"
              xlinkHref="#l"
            />
            <use
              fill="#412B13"
              transform="rotate(-74.87 41.364 -22.098)"
              xlinkHref="#m"
            />
            <use
              fill="#F3722C"
              transform="translate(52.1 8)"
              xlinkHref="#n"
            />
            <use
              fill="#F3722C"
              transform="translate(31.5 34.3)"
              xlinkHref="#o"
            />
            <use
              fill="#F3722C"
              transform="translate(14.3)"
              xlinkHref="#p"
            />
            <use
              fill="#F3722C"
              transform="translate(30.9 18.9)"
              xlinkHref="#q"
            />
            <use
              fill="#F3722C"
              transform="translate(37.6 18.9)"
              xlinkHref="#r"
            />
            <use
              fill="#FAA427"
              transform="translate(27.4 53.9)"
              xlinkHref="#s"
            />
            <use
              fill="#FAA427"
              transform="translate(39.1 53.9)"
              xlinkHref="#t"
            />
            <use
              fill="#F3722C"
              transform="translate(27.4 53.9)"
              xlinkHref="#u"
            />
            <use
              fill="#342013"
              transform="translate(28.6 26.2)"
              xlinkHref="#v"
            />
            <use
              fill="#FFF"
              transform="translate(32.6 28.7)"
              xlinkHref="#w"
            />
            <defs>
              <path
                d="M54.921 36.053L0 0l1.413 24.908c.359 6.249 5.752 11.145 12.283 11.145H54.92z"
                id="a"
              />
              <path
                d="M42.12 32.526L13.47 0 0 23.737c.282 4.924 4.527 8.778 9.672 8.778l32.448.01z"
                id="b"
              />
              <path
                d="M3.326 17.01a3.312 3.312 0 0 1-1.545-6.25C6.059 8.52 8.482 2.226 8.52 2.165a3.313 3.313 0 0 1 6.216 2.296c-.133.354-3.312 8.717-9.86 12.145-.475.26-1.008.4-1.55.403z"
                id="c"
              />
              <path
                d="M5.079 9.205A28.654 28.654 0 0 0 7.287 4.75a3.312 3.312 0 1 0-6.183-2.296C.781 3.234.412 3.996 0 4.734c1.33 1.181 3.544 3.152 5.079 4.471z"
                id="d"
              />
              <path
                d="M11.682 17.27a3.312 3.312 0 0 0 1.545-6.248C8.95 8.78 6.526 2.487 6.504 2.427A3.312 3.312 0 1 0 .316 4.723c.126.353 3.312 8.717 9.853 12.145.464.254.983.393 1.513.403z"
                id="e"
              />
              <path
                d="M2.45 9.01A28.33 28.33 0 0 1 .242 4.553a3.312 3.312 0 1 1 6.21-2.296c.326.78.695 1.54 1.104 2.28C6.187 5.719 3.973 7.69 2.45 9.009z"
                id="f"
              />
              <path
                d="M35.159 0H6.542A6.542 6.542 0 0 0 0 6.542v14.016a6.542 6.542 0 0 0 6.542 6.541h28.617a6.541 6.541 0 0 0 6.541-6.541V6.542A6.542 6.542 0 0 0 35.16 0z"
                id="g"
              />
              <path
                d="M54.254 0H9.026A9.026 9.026 0 0 0 0 9.026v17.207a9.026 9.026 0 0 0 9.026 9.025h45.228a9.026 9.026 0 0 0 9.025-9.026V9.027A9.026 9.026 0 0 0 54.253 0z"
                id="h"
              />
              <path
                d="M9.721 18.637c5.37 0 9.721-4.172 9.721-9.319C19.442 4.172 15.09 0 9.722 0 4.351 0 0 4.172 0 9.318c0 5.147 4.352 9.319 9.721 9.319z"
                id="i"
              />
              <path
                d="M5.19 9.959c2.865 0 5.188-2.23 5.188-4.98C10.378 2.23 8.055 0 5.19 0S0 2.23 0 4.98c0 2.75 2.323 4.979 5.19 4.979z"
                id="j"
              />
              <path
                d="M7.262.351C2.078 1.753-1.018 6.921.306 11.89l18.77-5.073C17.705 1.847 12.411-1.045 7.261.35z"
                id="k"
              />
              <path
                d="M9.318 19.442c5.147 0 9.319-4.352 9.319-9.72C18.637 4.351 14.465 0 9.318 0 4.172 0 0 4.352 0 9.721c0 5.37 4.172 9.721 9.318 9.721z"
                id="l"
              />
              <path
                d="M4.98 10.378c2.75 0 4.979-2.323 4.979-5.189S7.729 0 4.979 0C2.23 0 0 2.323 0 5.19c0 2.865 2.23 5.188 4.98 5.188z"
                id="m"
              />
              <path
                d="M11.819.351c5.178 1.402 8.28 6.57 6.95 11.538L0 6.816C1.347 1.847 6.635-1.045 11.819.35z"
                id="n"
              />
              <path
                d="M5.106 4.897A5.007 5.007 0 0 0 10.218 0H0a5.001 5.001 0 0 0 5.106 4.897z"
                id="o"
              />
              <path
                d="M0 0l22.258 18.498L44.516 0H0z"
                id="p"
              />
              <path
                d="M2.445 0A2.396 2.396 0 0 0 0 2.342h4.885a2.39 2.39 0 0 0-2.44-2.34z"
                id="q"
              />
              <path
                d="M2.462 0A2.396 2.396 0 0 0 0 2.343h4.885A2.39 2.39 0 0 0 2.462 0z"
                id="r"
              />
              <path
                d="M0 0h6.227v3.091A3.047 3.047 0 0 1 3.18 6.14h-.127A3.047 3.047 0 0 1 .006 3.09V0H0z"
                id="s"
              />
              <path
                d="M.006 0H6.22v3.091A3.047 3.047 0 0 1 3.174 6.14h-.127A3.047 3.047 0 0 1 0 3.09V0h.006z"
                id="t"
              />
              <path
                d="M31.328 0H0v1.474h31.328V0z"
                id="u"
              />
              <path
                d="M15.422 1.503A17.422 17.422 0 0 0 8.113.002 17.4 17.4 0 0 0 .805 1.503a1.457 1.457 0 0 0 .629 2.76h2.572V4.06a1.579 1.579 0 0 1 2.126-1.468 6.194 6.194 0 0 0 3.963 0 1.574 1.574 0 0 1 2.12 1.468v.204h2.572a1.463 1.463 0 0 0 .635-2.76z"
                id="v"
              />
              <path
                d="M6.072.104a6.194 6.194 0 0 1-3.963 0A1.579 1.579 0 0 0 0 1.573v.204h8.209v-.204A1.573 1.573 0 0 0 6.072.104z"
                id="w"
              />
            </defs>
          </svg>
        </div>
        <h3
          className="c12 c13"
        >
          Sorry, but we weren’t able to find any packages with that filter
        </h3>
      </div>
    </div>
  </div>
</form>
`;

exports[`renders <Packages isVmSelected /> without throwing 1`] = `
.c11 {
  margin-bottom: 0.75rem;
}

.c9 {
  padding: 2.25rem;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  margin-bottom: 0.125rem;
  margin-left: 0.5625rem;
}

.c13 {
  color: rgba(73,73,73,1);
  font-weight: normal;
  line-height: 1.625rem;
  font-size: 1.3125rem;
  margin: 0;
}

.c13 + p,
.c13 + small,
.c13 + h1,
.c13 + h2,
.c13 + label,
.c13 + h3,
.c13 + h4,
.c13 + h5,
.c13 + div,
.c13 + span {
  margin-top: 1.5rem;
}

.c8 {
  box-sizing: content-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  border-width: 0.0625rem;
  border-style: solid;
  -webkit-transition: all 300ms ease;
  transition: all 300ms ease;
  color: rgba(73,73,73,1);
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
}

.c0 {
  overflow: hidden;
  border-spacing: 0;
  border-collapse: separate;
  table-layout: fixed;
  width: 100%;
  max-width: 100%;
}

.c1 {
  width: 100%;
  background: rgb(250,250,250);
}

.c1 th:first-child {
  border-top-left-radius: 0.25rem;
}

.c1 th:last-child {
  border-top-right-radius: 0.25rem;
}

.c6 {
  width: 100%;
}

.c3 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 12.5rem;
  display: table-cell;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  text-align: left;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
  border-bottom-width: 0;
  color: rgba(73,73,73,1);
  font-weight: 600;
}

.c3:not(:first-child) {
  border-left-width: 0;
}

.c3:not(:last-child) {
  border-right-width: 0;
}

.c5 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 6.25rem;
  display: table-cell;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  text-align: right;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
  border-bottom-width: 0;
}

.c5:not(:first-child) {
  border-left-width: 0;
}

.c5:not(:last-child) {
  border-right-width: 0;
}

.c2 {
  display: table-row;
  color: rgba(73,73,73,1);
  background-color: rgb(255,255,255);
  box-shadow: 0 0.125rem 0 rgba(0,0,0,0.05);
  box-sizing: border-box;
  color: rgba(73,73,73,1);
  background-color: transparent;
  border: none;
  box-shadow: none;
}

.c2:last-child {
  box-shadow: none;
}

.c2:last-child td {
  border-bottom-width: 0.0625rem;
}

.c12 {
  color: rgb(151,151,151);
  text-align: center;
}

.c7 {
  width: calc(100% - 0.125rem);
  border-top: none;
}

<form>
  <table
    className="c0"
  >
    <thead
      className="c1"
      disabled={undefined}
      name="thdead"
      selected={undefined}
    >
      <tr
        className="c2"
        disabled={undefined}
        name="tr"
        selected={undefined}
      >
        <th
          className="c3"
          disabled={undefined}
          name="th"
          onClick={[Function]}
          selected={undefined}
        >
          <span>
            Name 
          </span>
          <svg
            className="c4"
            height="6"
            innerRef={undefined}
            marginBottom="0.125rem"
            marginLeft="0.5625rem"
            style={
              Object {
                "transform": "rotate(180deg)",
              }
            }
            viewBox="0 0 9.6 6"
            width="9.6"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.6,1.12,8.24,0,4.8,3.5,1.36,0,0,1.12,4.8,6Z"
              fill="rgba(73, 73, 73, 1)"
            />
          </svg>
        </th>
        <th
          className="c5"
          disabled={undefined}
          name="th"
          onClick={[Function]}
          selected={undefined}
        >
          <span>
            RAM 
          </span>
        </th>
        <th
          className="c5"
          disabled={undefined}
          name="th"
          onClick={[Function]}
          selected={undefined}
        >
          <span>
            Disk 
          </span>
        </th>
        <th
          className="c5"
          disabled={undefined}
          name="th"
          onClick={[Function]}
          selected={undefined}
        >
          <span>
            $/hour
          </span>
        </th>
      </tr>
    </thead>
    <tbody
      className="c6"
      disabled={undefined}
      name="tbody"
      selected={undefined}
    />
  </table>
  <div
    className="c7 c8"
    disabled={false}
    name="card"
  >
    <div
      className="c9"
    >
      <div
        className="c10"
      >
        <div
          className="c11"
        >
          <svg
            height={60}
            viewBox="0 0 79 60"
            width={79}
            xmlns="http://www.w3.org/2000/svg"
            xmlnsXlink="http://www.w3.org/1999/xlink"
          >
            <title>
              Guilty_Salamander
            </title>
            <desc>
              Created using Figma
            </desc>
            <use
              fill="#FAA427"
              transform="translate(23.8 22)"
              xlinkHref="#a"
            />
            <use
              fill="#F3722C"
              transform="translate(27.3 25.5)"
              xlinkHref="#b"
            />
            <use
              fill="#FAA427"
              transform="translate(4.8 32.1)"
              xlinkHref="#c"
            />
            <use
              fill="#F3722C"
              transform="translate(12.2 31.8)"
              xlinkHref="#d"
            />
            <use
              fill="#FAA427"
              transform="translate(54.4 31.9)"
              xlinkHref="#e"
            />
            <use
              fill="#F3722C"
              transform="translate(54.4 32)"
              xlinkHref="#f"
            />
            <use
              fill="#FAA427"
              transform="translate(15.8 26.8)"
              xlinkHref="#g"
            />
            <use
              fill="#FAA427"
              transform="translate(5)"
              xlinkHref="#h"
            />
            <use
              fill="#FAFBFC"
              transform="rotate(-15.13 41.037 5.45)"
              xlinkHref="#i"
            />
            <use
              fill="#412B13"
              transform="rotate(-15.13 67.273 -24.78)"
              xlinkHref="#j"
            />
            <use
              fill="#F3722C"
              transform="translate(2.2 8)"
              xlinkHref="#k"
            />
            <use
              fill="#FAFBFC"
              transform="rotate(-74.87 40.46 -20.511)"
              xlinkHref="#l"
            />
            <use
              fill="#412B13"
              transform="rotate(-74.87 41.364 -22.098)"
              xlinkHref="#m"
            />
            <use
              fill="#F3722C"
              transform="translate(52.1 8)"
              xlinkHref="#n"
            />
            <use
              fill="#F3722C"
              transform="translate(31.5 34.3)"
              xlinkHref="#o"
            />
            <use
              fill="#F3722C"
              transform="translate(14.3)"
              xlinkHref="#p"
            />
            <use
              fill="#F3722C"
              transform="translate(30.9 18.9)"
              xlinkHref="#q"
            />
            <use
              fill="#F3722C"
              transform="translate(37.6 18.9)"
              xlinkHref="#r"
            />
            <use
              fill="#FAA427"
              transform="translate(27.4 53.9)"
              xlinkHref="#s"
            />
            <use
              fill="#FAA427"
              transform="translate(39.1 53.9)"
              xlinkHref="#t"
            />
            <use
              fill="#F3722C"
              transform="translate(27.4 53.9)"
              xlinkHref="#u"
            />
            <use
              fill="#342013"
              transform="translate(28.6 26.2)"
              xlinkHref="#v"
            />
            <use
              fill="#FFF"
              transform="translate(32.6 28.7)"
              xlinkHref="#w"
            />
            <defs>
              <path
                d="M54.921 36.053L0 0l1.413 24.908c.359 6.249 5.752 11.145 12.283 11.145H54.92z"
                id="a"
              />
              <path
                d="M42.12 32.526L13.47 0 0 23.737c.282 4.924 4.527 8.778 9.672 8.778l32.448.01z"
                id="b"
              />
              <path
                d="M3.326 17.01a3.312 3.312 0 0 1-1.545-6.25C6.059 8.52 8.482 2.226 8.52 2.165a3.313 3.313 0 0 1 6.216 2.296c-.133.354-3.312 8.717-9.86 12.145-.475.26-1.008.4-1.55.403z"
                id="c"
              />
              <path
                d="M5.079 9.205A28.654 28.654 0 0 0 7.287 4.75a3.312 3.312 0 1 0-6.183-2.296C.781 3.234.412 3.996 0 4.734c1.33 1.181 3.544 3.152 5.079 4.471z"
                id="d"
              />
              <path
                d="M11.682 17.27a3.312 3.312 0 0 0 1.545-6.248C8.95 8.78 6.526 2.487 6.504 2.427A3.312 3.312 0 1 0 .316 4.723c.126.353 3.312 8.717 9.853 12.145.464.254.983.393 1.513.403z"
                id="e"
              />
              <path
                d="M2.45 9.01A28.33 28.33 0 0 1 .242 4.553a3.312 3.312 0 1 1 6.21-2.296c.326.78.695 1.54 1.104 2.28C6.187 5.719 3.973 7.69 2.45 9.009z"
                id="f"
              />
              <path
                d="M35.159 0H6.542A6.542 6.542 0 0 0 0 6.542v14.016a6.542 6.542 0 0 0 6.542 6.541h28.617a6.541 6.541 0 0 0 6.541-6.541V6.542A6.542 6.542 0 0 0 35.16 0z"
                id="g"
              />
              <path
                d="M54.254 0H9.026A9.026 9.026 0 0 0 0 9.026v17.207a9.026 9.026 0 0 0 9.026 9.025h45.228a9.026 9.026 0 0 0 9.025-9.026V9.027A9.026 9.026 0 0 0 54.253 0z"
                id="h"
              />
              <path
                d="M9.721 18.637c5.37 0 9.721-4.172 9.721-9.319C19.442 4.172 15.09 0 9.722 0 4.351 0 0 4.172 0 9.318c0 5.147 4.352 9.319 9.721 9.319z"
                id="i"
              />
              <path
                d="M5.19 9.959c2.865 0 5.188-2.23 5.188-4.98C10.378 2.23 8.055 0 5.19 0S0 2.23 0 4.98c0 2.75 2.323 4.979 5.19 4.979z"
                id="j"
              />
              <path
                d="M7.262.351C2.078 1.753-1.018 6.921.306 11.89l18.77-5.073C17.705 1.847 12.411-1.045 7.261.35z"
                id="k"
              />
              <path
                d="M9.318 19.442c5.147 0 9.319-4.352 9.319-9.72C18.637 4.351 14.465 0 9.318 0 4.172 0 0 4.352 0 9.721c0 5.37 4.172 9.721 9.318 9.721z"
                id="l"
              />
              <path
                d="M4.98 10.378c2.75 0 4.979-2.323 4.979-5.189S7.729 0 4.979 0C2.23 0 0 2.323 0 5.19c0 2.865 2.23 5.188 4.98 5.188z"
                id="m"
              />
              <path
                d="M11.819.351c5.178 1.402 8.28 6.57 6.95 11.538L0 6.816C1.347 1.847 6.635-1.045 11.819.35z"
                id="n"
              />
              <path
                d="M5.106 4.897A5.007 5.007 0 0 0 10.218 0H0a5.001 5.001 0 0 0 5.106 4.897z"
                id="o"
              />
              <path
                d="M0 0l22.258 18.498L44.516 0H0z"
                id="p"
              />
              <path
                d="M2.445 0A2.396 2.396 0 0 0 0 2.342h4.885a2.39 2.39 0 0 0-2.44-2.34z"
                id="q"
              />
              <path
                d="M2.462 0A2.396 2.396 0 0 0 0 2.343h4.885A2.39 2.39 0 0 0 2.462 0z"
                id="r"
              />
              <path
                d="M0 0h6.227v3.091A3.047 3.047 0 0 1 3.18 6.14h-.127A3.047 3.047 0 0 1 .006 3.09V0H0z"
                id="s"
              />
              <path
                d="M.006 0H6.22v3.091A3.047 3.047 0 0 1 3.174 6.14h-.127A3.047 3.047 0 0 1 0 3.09V0h.006z"
                id="t"
              />
              <path
                d="M31.328 0H0v1.474h31.328V0z"
                id="u"
              />
              <path
                d="M15.422 1.503A17.422 17.422 0 0 0 8.113.002 17.4 17.4 0 0 0 .805 1.503a1.457 1.457 0 0 0 .629 2.76h2.572V4.06a1.579 1.579 0 0 1 2.126-1.468 6.194 6.194 0 0 0 3.963 0 1.574 1.574 0 0 1 2.12 1.468v.204h2.572a1.463 1.463 0 0 0 .635-2.76z"
                id="v"
              />
              <path
                d="M6.072.104a6.194 6.194 0 0 1-3.963 0A1.579 1.579 0 0 0 0 1.573v.204h8.209v-.204A1.573 1.573 0 0 0 6.072.104z"
                id="w"
              />
            </defs>
          </svg>
        </div>
        <h3
          className="c12 c13"
        >
          Sorry, but we weren’t able to find any packages with that filter
        </h3>
      </div>
    </div>
  </div>
</form>
`;

exports[`renders <Packages loading /> without throwing 1`] = `
.c11 {
  margin-bottom: 0.75rem;
}

.c9 {
  padding: 2.25rem;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  margin-bottom: 0.125rem;
  margin-left: 0.5625rem;
}

.c13 {
  color: rgba(73,73,73,1);
  font-weight: normal;
  line-height: 1.625rem;
  font-size: 1.3125rem;
  margin: 0;
}

.c13 + p,
.c13 + small,
.c13 + h1,
.c13 + h2,
.c13 + label,
.c13 + h3,
.c13 + h4,
.c13 + h5,
.c13 + div,
.c13 + span {
  margin-top: 1.5rem;
}

.c8 {
  box-sizing: content-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  border-width: 0.0625rem;
  border-style: solid;
  -webkit-transition: all 300ms ease;
  transition: all 300ms ease;
  color: rgba(73,73,73,1);
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
}

.c0 {
  overflow: hidden;
  border-spacing: 0;
  border-collapse: separate;
  table-layout: fixed;
  width: 100%;
  max-width: 100%;
}

.c1 {
  width: 100%;
  background: rgb(250,250,250);
}

.c1 th:first-child {
  border-top-left-radius: 0.25rem;
}

.c1 th:last-child {
  border-top-right-radius: 0.25rem;
}

.c6 {
  width: 100%;
}

.c3 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 12.5rem;
  display: table-cell;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  text-align: left;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
  border-bottom-width: 0;
  color: rgba(73,73,73,1);
  font-weight: 600;
}

.c3:not(:first-child) {
  border-left-width: 0;
}

.c3:not(:last-child) {
  border-right-width: 0;
}

.c5 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 6.25rem;
  display: table-cell;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  text-align: right;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
  border-bottom-width: 0;
}

.c5:not(:first-child) {
  border-left-width: 0;
}

.c5:not(:last-child) {
  border-right-width: 0;
}

.c2 {
  display: table-row;
  color: rgba(73,73,73,1);
  background-color: rgb(255,255,255);
  box-shadow: 0 0.125rem 0 rgba(0,0,0,0.05);
  box-sizing: border-box;
  color: rgba(73,73,73,1);
  background-color: transparent;
  border: none;
  box-shadow: none;
}

.c2:last-child {
  box-shadow: none;
}

.c2:last-child td {
  border-bottom-width: 0.0625rem;
}

.c12 {
  color: rgb(151,151,151);
  text-align: center;
}

.c7 {
  width: calc(100% - 0.125rem);
  border-top: none;
}

<form>
  <table
    className="c0"
  >
    <thead
      className="c1"
      disabled={undefined}
      name="thdead"
      selected={undefined}
    >
      <tr
        className="c2"
        disabled={undefined}
        name="tr"
        selected={undefined}
      >
        <th
          className="c3"
          disabled={undefined}
          name="th"
          onClick={[Function]}
          selected={undefined}
        >
          <span>
            Name 
          </span>
          <svg
            className="c4"
            height="6"
            innerRef={undefined}
            marginBottom="0.125rem"
            marginLeft="0.5625rem"
            style={
              Object {
                "transform": "rotate(180deg)",
              }
            }
            viewBox="0 0 9.6 6"
            width="9.6"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.6,1.12,8.24,0,4.8,3.5,1.36,0,0,1.12,4.8,6Z"
              fill="rgba(73, 73, 73, 1)"
            />
          </svg>
        </th>
        <th
          className="c5"
          disabled={undefined}
          name="th"
          onClick={[Function]}
          selected={undefined}
        >
          <span>
            RAM 
          </span>
        </th>
        <th
          className="c5"
          disabled={undefined}
          name="th"
          onClick={[Function]}
          selected={undefined}
        >
          <span>
            Disk 
          </span>
        </th>
        <th
          className="c5"
          disabled={undefined}
          name="th"
          onClick={[Function]}
          selected={undefined}
        >
          <span>
            $/hour
          </span>
        </th>
      </tr>
    </thead>
    <tbody
      className="c6"
      disabled={undefined}
      name="tbody"
      selected={undefined}
    />
  </table>
  <div
    className="c7 c8"
    disabled={false}
    name="card"
  >
    <div
      className="c9"
    >
      <div
        className="c10"
      >
        <div
          className="c11"
        >
          <svg
            height={60}
            viewBox="0 0 79 60"
            width={79}
            xmlns="http://www.w3.org/2000/svg"
            xmlnsXlink="http://www.w3.org/1999/xlink"
          >
            <title>
              Guilty_Salamander
            </title>
            <desc>
              Created using Figma
            </desc>
            <use
              fill="#FAA427"
              transform="translate(23.8 22)"
              xlinkHref="#a"
            />
            <use
              fill="#F3722C"
              transform="translate(27.3 25.5)"
              xlinkHref="#b"
            />
            <use
              fill="#FAA427"
              transform="translate(4.8 32.1)"
              xlinkHref="#c"
            />
            <use
              fill="#F3722C"
              transform="translate(12.2 31.8)"
              xlinkHref="#d"
            />
            <use
              fill="#FAA427"
              transform="translate(54.4 31.9)"
              xlinkHref="#e"
            />
            <use
              fill="#F3722C"
              transform="translate(54.4 32)"
              xlinkHref="#f"
            />
            <use
              fill="#FAA427"
              transform="translate(15.8 26.8)"
              xlinkHref="#g"
            />
            <use
              fill="#FAA427"
              transform="translate(5)"
              xlinkHref="#h"
            />
            <use
              fill="#FAFBFC"
              transform="rotate(-15.13 41.037 5.45)"
              xlinkHref="#i"
            />
            <use
              fill="#412B13"
              transform="rotate(-15.13 67.273 -24.78)"
              xlinkHref="#j"
            />
            <use
              fill="#F3722C"
              transform="translate(2.2 8)"
              xlinkHref="#k"
            />
            <use
              fill="#FAFBFC"
              transform="rotate(-74.87 40.46 -20.511)"
              xlinkHref="#l"
            />
            <use
              fill="#412B13"
              transform="rotate(-74.87 41.364 -22.098)"
              xlinkHref="#m"
            />
            <use
              fill="#F3722C"
              transform="translate(52.1 8)"
              xlinkHref="#n"
            />
            <use
              fill="#F3722C"
              transform="translate(31.5 34.3)"
              xlinkHref="#o"
            />
            <use
              fill="#F3722C"
              transform="translate(14.3)"
              xlinkHref="#p"
            />
            <use
              fill="#F3722C"
              transform="translate(30.9 18.9)"
              xlinkHref="#q"
            />
            <use
              fill="#F3722C"
              transform="translate(37.6 18.9)"
              xlinkHref="#r"
            />
            <use
              fill="#FAA427"
              transform="translate(27.4 53.9)"
              xlinkHref="#s"
            />
            <use
              fill="#FAA427"
              transform="translate(39.1 53.9)"
              xlinkHref="#t"
            />
            <use
              fill="#F3722C"
              transform="translate(27.4 53.9)"
              xlinkHref="#u"
            />
            <use
              fill="#342013"
              transform="translate(28.6 26.2)"
              xlinkHref="#v"
            />
            <use
              fill="#FFF"
              transform="translate(32.6 28.7)"
              xlinkHref="#w"
            />
            <defs>
              <path
                d="M54.921 36.053L0 0l1.413 24.908c.359 6.249 5.752 11.145 12.283 11.145H54.92z"
                id="a"
              />
              <path
                d="M42.12 32.526L13.47 0 0 23.737c.282 4.924 4.527 8.778 9.672 8.778l32.448.01z"
                id="b"
              />
              <path
                d="M3.326 17.01a3.312 3.312 0 0 1-1.545-6.25C6.059 8.52 8.482 2.226 8.52 2.165a3.313 3.313 0 0 1 6.216 2.296c-.133.354-3.312 8.717-9.86 12.145-.475.26-1.008.4-1.55.403z"
                id="c"
              />
              <path
                d="M5.079 9.205A28.654 28.654 0 0 0 7.287 4.75a3.312 3.312 0 1 0-6.183-2.296C.781 3.234.412 3.996 0 4.734c1.33 1.181 3.544 3.152 5.079 4.471z"
                id="d"
              />
              <path
                d="M11.682 17.27a3.312 3.312 0 0 0 1.545-6.248C8.95 8.78 6.526 2.487 6.504 2.427A3.312 3.312 0 1 0 .316 4.723c.126.353 3.312 8.717 9.853 12.145.464.254.983.393 1.513.403z"
                id="e"
              />
              <path
                d="M2.45 9.01A28.33 28.33 0 0 1 .242 4.553a3.312 3.312 0 1 1 6.21-2.296c.326.78.695 1.54 1.104 2.28C6.187 5.719 3.973 7.69 2.45 9.009z"
                id="f"
              />
              <path
                d="M35.159 0H6.542A6.542 6.542 0 0 0 0 6.542v14.016a6.542 6.542 0 0 0 6.542 6.541h28.617a6.541 6.541 0 0 0 6.541-6.541V6.542A6.542 6.542 0 0 0 35.16 0z"
                id="g"
              />
              <path
                d="M54.254 0H9.026A9.026 9.026 0 0 0 0 9.026v17.207a9.026 9.026 0 0 0 9.026 9.025h45.228a9.026 9.026 0 0 0 9.025-9.026V9.027A9.026 9.026 0 0 0 54.253 0z"
                id="h"
              />
              <path
                d="M9.721 18.637c5.37 0 9.721-4.172 9.721-9.319C19.442 4.172 15.09 0 9.722 0 4.351 0 0 4.172 0 9.318c0 5.147 4.352 9.319 9.721 9.319z"
                id="i"
              />
              <path
                d="M5.19 9.959c2.865 0 5.188-2.23 5.188-4.98C10.378 2.23 8.055 0 5.19 0S0 2.23 0 4.98c0 2.75 2.323 4.979 5.19 4.979z"
                id="j"
              />
              <path
                d="M7.262.351C2.078 1.753-1.018 6.921.306 11.89l18.77-5.073C17.705 1.847 12.411-1.045 7.261.35z"
                id="k"
              />
              <path
                d="M9.318 19.442c5.147 0 9.319-4.352 9.319-9.72C18.637 4.351 14.465 0 9.318 0 4.172 0 0 4.352 0 9.721c0 5.37 4.172 9.721 9.318 9.721z"
                id="l"
              />
              <path
                d="M4.98 10.378c2.75 0 4.979-2.323 4.979-5.189S7.729 0 4.979 0C2.23 0 0 2.323 0 5.19c0 2.865 2.23 5.188 4.98 5.188z"
                id="m"
              />
              <path
                d="M11.819.351c5.178 1.402 8.28 6.57 6.95 11.538L0 6.816C1.347 1.847 6.635-1.045 11.819.35z"
                id="n"
              />
              <path
                d="M5.106 4.897A5.007 5.007 0 0 0 10.218 0H0a5.001 5.001 0 0 0 5.106 4.897z"
                id="o"
              />
              <path
                d="M0 0l22.258 18.498L44.516 0H0z"
                id="p"
              />
              <path
                d="M2.445 0A2.396 2.396 0 0 0 0 2.342h4.885a2.39 2.39 0 0 0-2.44-2.34z"
                id="q"
              />
              <path
                d="M2.462 0A2.396 2.396 0 0 0 0 2.343h4.885A2.39 2.39 0 0 0 2.462 0z"
                id="r"
              />
              <path
                d="M0 0h6.227v3.091A3.047 3.047 0 0 1 3.18 6.14h-.127A3.047 3.047 0 0 1 .006 3.09V0H0z"
                id="s"
              />
              <path
                d="M.006 0H6.22v3.091A3.047 3.047 0 0 1 3.174 6.14h-.127A3.047 3.047 0 0 1 0 3.09V0h.006z"
                id="t"
              />
              <path
                d="M31.328 0H0v1.474h31.328V0z"
                id="u"
              />
              <path
                d="M15.422 1.503A17.422 17.422 0 0 0 8.113.002 17.4 17.4 0 0 0 .805 1.503a1.457 1.457 0 0 0 .629 2.76h2.572V4.06a1.579 1.579 0 0 1 2.126-1.468 6.194 6.194 0 0 0 3.963 0 1.574 1.574 0 0 1 2.12 1.468v.204h2.572a1.463 1.463 0 0 0 .635-2.76z"
                id="v"
              />
              <path
                d="M6.072.104a6.194 6.194 0 0 1-3.963 0A1.579 1.579 0 0 0 0 1.573v.204h8.209v-.204A1.573 1.573 0 0 0 6.072.104z"
                id="w"
              />
            </defs>
          </svg>
        </div>
        <h3
          className="c12 c13"
        >
          Sorry, but we weren’t able to find any packages with that filter
        </h3>
      </div>
    </div>
  </div>
</form>
`;

exports[
  `renders <Packages packages=[{name: stuff, imageName: stuff}] /> without throwing 1`
] = `
.c4 {
  margin-bottom: 0.125rem;
  margin-left: 0.5625rem;
}

.c0 {
  overflow: hidden;
  border-spacing: 0;
  border-collapse: separate;
  table-layout: fixed;
  width: 100%;
  max-width: 100%;
}

.c1 {
  width: 100%;
  background: rgb(250,250,250);
}

.c1 th:first-child {
  border-top-left-radius: 0.25rem;
}

.c1 th:last-child {
  border-top-right-radius: 0.25rem;
}

.c6 {
  width: 100%;
}

.c3 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 12.5rem;
  display: table-cell;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  text-align: left;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
  border-bottom-width: 0;
  color: rgba(73,73,73,1);
  font-weight: 600;
}

.c3:not(:first-child) {
  border-left-width: 0;
}

.c3:not(:last-child) {
  border-right-width: 0;
}

.c5 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 6.25rem;
  display: table-cell;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  text-align: right;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
  border-bottom-width: 0;
}

.c5:not(:first-child) {
  border-left-width: 0;
}

.c5:not(:last-child) {
  border-right-width: 0;
}

.c2 {
  display: table-row;
  color: rgba(73,73,73,1);
  background-color: rgb(255,255,255);
  box-shadow: 0 0.125rem 0 rgba(0,0,0,0.05);
  box-sizing: border-box;
  color: rgba(73,73,73,1);
  background-color: transparent;
  border: none;
  box-shadow: none;
}

.c2:last-child {
  box-shadow: none;
}

.c2:last-child td {
  border-bottom-width: 0.0625rem;
}

<form>
  <table
    className="c0"
  >
    <thead
      className="c1"
      disabled={undefined}
      name="thdead"
      selected={undefined}
    >
      <tr
        className="c2"
        disabled={undefined}
        name="tr"
        selected={undefined}
      >
        <th
          className="c3"
          disabled={undefined}
          name="th"
          onClick={[Function]}
          selected={undefined}
        >
          <span>
            Name 
          </span>
          <svg
            className="c4"
            height="6"
            innerRef={undefined}
            marginBottom="0.125rem"
            marginLeft="0.5625rem"
            style={
              Object {
                "transform": "rotate(180deg)",
              }
            }
            viewBox="0 0 9.6 6"
            width="9.6"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.6,1.12,8.24,0,4.8,3.5,1.36,0,0,1.12,4.8,6Z"
              fill="rgba(73, 73, 73, 1)"
            />
          </svg>
        </th>
        <th
          className="c5"
          disabled={undefined}
          name="th"
          onClick={[Function]}
          selected={undefined}
        >
          <span>
            RAM 
          </span>
        </th>
        <th
          className="c5"
          disabled={undefined}
          name="th"
          onClick={[Function]}
          selected={undefined}
        >
          <span>
            Disk 
          </span>
        </th>
        <th
          className="c5"
          disabled={undefined}
          name="th"
          onClick={[Function]}
          selected={undefined}
        >
          <span>
            $/hour
          </span>
        </th>
      </tr>
    </thead>
    <tbody
      className="c6"
      disabled={undefined}
      name="tbody"
      selected={undefined}
    />
  </table>
</form>
`;

exports[`renders <Packages pristine={false} /> without throwing 1`] = `
.c11 {
  margin-bottom: 0.75rem;
}

.c9 {
  padding: 2.25rem;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  margin-bottom: 0.125rem;
  margin-left: 0.5625rem;
}

.c13 {
  color: rgba(73,73,73,1);
  font-weight: normal;
  line-height: 1.625rem;
  font-size: 1.3125rem;
  margin: 0;
}

.c13 + p,
.c13 + small,
.c13 + h1,
.c13 + h2,
.c13 + label,
.c13 + h3,
.c13 + h4,
.c13 + h5,
.c13 + div,
.c13 + span {
  margin-top: 1.5rem;
}

.c8 {
  box-sizing: content-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  border-width: 0.0625rem;
  border-style: solid;
  -webkit-transition: all 300ms ease;
  transition: all 300ms ease;
  color: rgba(73,73,73,1);
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
}

.c0 {
  overflow: hidden;
  border-spacing: 0;
  border-collapse: separate;
  table-layout: fixed;
  width: 100%;
  max-width: 100%;
}

.c1 {
  width: 100%;
  background: rgb(250,250,250);
}

.c1 th:first-child {
  border-top-left-radius: 0.25rem;
}

.c1 th:last-child {
  border-top-right-radius: 0.25rem;
}

.c6 {
  width: 100%;
}

.c3 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 12.5rem;
  display: table-cell;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  text-align: left;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
  border-bottom-width: 0;
  color: rgba(73,73,73,1);
  font-weight: 600;
}

.c3:not(:first-child) {
  border-left-width: 0;
}

.c3:not(:last-child) {
  border-right-width: 0;
}

.c5 {
  border-width: 0.0625rem;
  border-style: solid;
  border-color: rgb(216,216,216);
  border-spacing: 0;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 1.5rem;
  height: 3.75rem;
  width: 6.25rem;
  display: table-cell;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  text-align: right;
  height: 2.625rem;
  color: rgb(189,189,189);
  font-weight: 500;
  border-bottom-width: 0;
}

.c5:not(:first-child) {
  border-left-width: 0;
}

.c5:not(:last-child) {
  border-right-width: 0;
}

.c2 {
  display: table-row;
  color: rgba(73,73,73,1);
  background-color: rgb(255,255,255);
  box-shadow: 0 0.125rem 0 rgba(0,0,0,0.05);
  box-sizing: border-box;
  color: rgba(73,73,73,1);
  background-color: transparent;
  border: none;
  box-shadow: none;
}

.c2:last-child {
  box-shadow: none;
}

.c2:last-child td {
  border-bottom-width: 0.0625rem;
}

.c12 {
  color: rgb(151,151,151);
  text-align: center;
}

.c7 {
  width: calc(100% - 0.125rem);
  border-top: none;
}

<form>
  <table
    className="c0"
  >
    <thead
      className="c1"
      disabled={undefined}
      name="thdead"
      selected={undefined}
    >
      <tr
        className="c2"
        disabled={undefined}
        name="tr"
        selected={undefined}
      >
        <th
          className="c3"
          disabled={undefined}
          name="th"
          onClick={[Function]}
          selected={undefined}
        >
          <span>
            Name 
          </span>
          <svg
            className="c4"
            height="6"
            innerRef={undefined}
            marginBottom="0.125rem"
            marginLeft="0.5625rem"
            style={
              Object {
                "transform": "rotate(180deg)",
              }
            }
            viewBox="0 0 9.6 6"
            width="9.6"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.6,1.12,8.24,0,4.8,3.5,1.36,0,0,1.12,4.8,6Z"
              fill="rgba(73, 73, 73, 1)"
            />
          </svg>
        </th>
        <th
          className="c5"
          disabled={undefined}
          name="th"
          onClick={[Function]}
          selected={undefined}
        >
          <span>
            RAM 
          </span>
        </th>
        <th
          className="c5"
          disabled={undefined}
          name="th"
          onClick={[Function]}
          selected={undefined}
        >
          <span>
            Disk 
          </span>
        </th>
        <th
          className="c5"
          disabled={undefined}
          name="th"
          onClick={[Function]}
          selected={undefined}
        >
          <span>
            $/hour
          </span>
        </th>
      </tr>
    </thead>
    <tbody
      className="c6"
      disabled={undefined}
      name="tbody"
      selected={undefined}
    />
  </table>
  <div
    className="c7 c8"
    disabled={false}
    name="card"
  >
    <div
      className="c9"
    >
      <div
        className="c10"
      >
        <div
          className="c11"
        >
          <svg
            height={60}
            viewBox="0 0 79 60"
            width={79}
            xmlns="http://www.w3.org/2000/svg"
            xmlnsXlink="http://www.w3.org/1999/xlink"
          >
            <title>
              Guilty_Salamander
            </title>
            <desc>
              Created using Figma
            </desc>
            <use
              fill="#FAA427"
              transform="translate(23.8 22)"
              xlinkHref="#a"
            />
            <use
              fill="#F3722C"
              transform="translate(27.3 25.5)"
              xlinkHref="#b"
            />
            <use
              fill="#FAA427"
              transform="translate(4.8 32.1)"
              xlinkHref="#c"
            />
            <use
              fill="#F3722C"
              transform="translate(12.2 31.8)"
              xlinkHref="#d"
            />
            <use
              fill="#FAA427"
              transform="translate(54.4 31.9)"
              xlinkHref="#e"
            />
            <use
              fill="#F3722C"
              transform="translate(54.4 32)"
              xlinkHref="#f"
            />
            <use
              fill="#FAA427"
              transform="translate(15.8 26.8)"
              xlinkHref="#g"
            />
            <use
              fill="#FAA427"
              transform="translate(5)"
              xlinkHref="#h"
            />
            <use
              fill="#FAFBFC"
              transform="rotate(-15.13 41.037 5.45)"
              xlinkHref="#i"
            />
            <use
              fill="#412B13"
              transform="rotate(-15.13 67.273 -24.78)"
              xlinkHref="#j"
            />
            <use
              fill="#F3722C"
              transform="translate(2.2 8)"
              xlinkHref="#k"
            />
            <use
              fill="#FAFBFC"
              transform="rotate(-74.87 40.46 -20.511)"
              xlinkHref="#l"
            />
            <use
              fill="#412B13"
              transform="rotate(-74.87 41.364 -22.098)"
              xlinkHref="#m"
            />
            <use
              fill="#F3722C"
              transform="translate(52.1 8)"
              xlinkHref="#n"
            />
            <use
              fill="#F3722C"
              transform="translate(31.5 34.3)"
              xlinkHref="#o"
            />
            <use
              fill="#F3722C"
              transform="translate(14.3)"
              xlinkHref="#p"
            />
            <use
              fill="#F3722C"
              transform="translate(30.9 18.9)"
              xlinkHref="#q"
            />
            <use
              fill="#F3722C"
              transform="translate(37.6 18.9)"
              xlinkHref="#r"
            />
            <use
              fill="#FAA427"
              transform="translate(27.4 53.9)"
              xlinkHref="#s"
            />
            <use
              fill="#FAA427"
              transform="translate(39.1 53.9)"
              xlinkHref="#t"
            />
            <use
              fill="#F3722C"
              transform="translate(27.4 53.9)"
              xlinkHref="#u"
            />
            <use
              fill="#342013"
              transform="translate(28.6 26.2)"
              xlinkHref="#v"
            />
            <use
              fill="#FFF"
              transform="translate(32.6 28.7)"
              xlinkHref="#w"
            />
            <defs>
              <path
                d="M54.921 36.053L0 0l1.413 24.908c.359 6.249 5.752 11.145 12.283 11.145H54.92z"
                id="a"
              />
              <path
                d="M42.12 32.526L13.47 0 0 23.737c.282 4.924 4.527 8.778 9.672 8.778l32.448.01z"
                id="b"
              />
              <path
                d="M3.326 17.01a3.312 3.312 0 0 1-1.545-6.25C6.059 8.52 8.482 2.226 8.52 2.165a3.313 3.313 0 0 1 6.216 2.296c-.133.354-3.312 8.717-9.86 12.145-.475.26-1.008.4-1.55.403z"
                id="c"
              />
              <path
                d="M5.079 9.205A28.654 28.654 0 0 0 7.287 4.75a3.312 3.312 0 1 0-6.183-2.296C.781 3.234.412 3.996 0 4.734c1.33 1.181 3.544 3.152 5.079 4.471z"
                id="d"
              />
              <path
                d="M11.682 17.27a3.312 3.312 0 0 0 1.545-6.248C8.95 8.78 6.526 2.487 6.504 2.427A3.312 3.312 0 1 0 .316 4.723c.126.353 3.312 8.717 9.853 12.145.464.254.983.393 1.513.403z"
                id="e"
              />
              <path
                d="M2.45 9.01A28.33 28.33 0 0 1 .242 4.553a3.312 3.312 0 1 1 6.21-2.296c.326.78.695 1.54 1.104 2.28C6.187 5.719 3.973 7.69 2.45 9.009z"
                id="f"
              />
              <path
                d="M35.159 0H6.542A6.542 6.542 0 0 0 0 6.542v14.016a6.542 6.542 0 0 0 6.542 6.541h28.617a6.541 6.541 0 0 0 6.541-6.541V6.542A6.542 6.542 0 0 0 35.16 0z"
                id="g"
              />
              <path
                d="M54.254 0H9.026A9.026 9.026 0 0 0 0 9.026v17.207a9.026 9.026 0 0 0 9.026 9.025h45.228a9.026 9.026 0 0 0 9.025-9.026V9.027A9.026 9.026 0 0 0 54.253 0z"
                id="h"
              />
              <path
                d="M9.721 18.637c5.37 0 9.721-4.172 9.721-9.319C19.442 4.172 15.09 0 9.722 0 4.351 0 0 4.172 0 9.318c0 5.147 4.352 9.319 9.721 9.319z"
                id="i"
              />
              <path
                d="M5.19 9.959c2.865 0 5.188-2.23 5.188-4.98C10.378 2.23 8.055 0 5.19 0S0 2.23 0 4.98c0 2.75 2.323 4.979 5.19 4.979z"
                id="j"
              />
              <path
                d="M7.262.351C2.078 1.753-1.018 6.921.306 11.89l18.77-5.073C17.705 1.847 12.411-1.045 7.261.35z"
                id="k"
              />
              <path
                d="M9.318 19.442c5.147 0 9.319-4.352 9.319-9.72C18.637 4.351 14.465 0 9.318 0 4.172 0 0 4.352 0 9.721c0 5.37 4.172 9.721 9.318 9.721z"
                id="l"
              />
              <path
                d="M4.98 10.378c2.75 0 4.979-2.323 4.979-5.189S7.729 0 4.979 0C2.23 0 0 2.323 0 5.19c0 2.865 2.23 5.188 4.98 5.188z"
                id="m"
              />
              <path
                d="M11.819.351c5.178 1.402 8.28 6.57 6.95 11.538L0 6.816C1.347 1.847 6.635-1.045 11.819.35z"
                id="n"
              />
              <path
                d="M5.106 4.897A5.007 5.007 0 0 0 10.218 0H0a5.001 5.001 0 0 0 5.106 4.897z"
                id="o"
              />
              <path
                d="M0 0l22.258 18.498L44.516 0H0z"
                id="p"
              />
              <path
                d="M2.445 0A2.396 2.396 0 0 0 0 2.342h4.885a2.39 2.39 0 0 0-2.44-2.34z"
                id="q"
              />
              <path
                d="M2.462 0A2.396 2.396 0 0 0 0 2.343h4.885A2.39 2.39 0 0 0 2.462 0z"
                id="r"
              />
              <path
                d="M0 0h6.227v3.091A3.047 3.047 0 0 1 3.18 6.14h-.127A3.047 3.047 0 0 1 .006 3.09V0H0z"
                id="s"
              />
              <path
                d="M.006 0H6.22v3.091A3.047 3.047 0 0 1 3.174 6.14h-.127A3.047 3.047 0 0 1 0 3.09V0h.006z"
                id="t"
              />
              <path
                d="M31.328 0H0v1.474h31.328V0z"
                id="u"
              />
              <path
                d="M15.422 1.503A17.422 17.422 0 0 0 8.113.002 17.4 17.4 0 0 0 .805 1.503a1.457 1.457 0 0 0 .629 2.76h2.572V4.06a1.579 1.579 0 0 1 2.126-1.468 6.194 6.194 0 0 0 3.963 0 1.574 1.574 0 0 1 2.12 1.468v.204h2.572a1.463 1.463 0 0 0 .635-2.76z"
                id="v"
              />
              <path
                d="M6.072.104a6.194 6.194 0 0 1-3.963 0A1.579 1.579 0 0 0 0 1.573v.204h8.209v-.204A1.573 1.573 0 0 0 6.072.104z"
                id="w"
              />
            </defs>
          </svg>
        </div>
        <h3
          className="c12 c13"
        >
          Sorry, but we weren’t able to find any packages with that filter
        </h3>
      </div>
    </div>
  </div>
</form>
`;
